test/schemas/invalid_parser/duplicate_name_with_def.blink
int1 = u8
int1 = u16
